--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "name": "tornabra-cron-worker",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "A cron worker service for the Tornabra project",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "repository": "",
   "author": "Breno Sobral <ssobralbreno@gmail.com>",
   "license": "MIT",
   "scripts": {
+    "build": "tsc",
     "dev": "tsnd src/index.ts --respawn --no-notify --transpileOnly --no-deps",
-    "lint": "yarn eslint \"./src/**/*.ts\"",
-    "lint-fix": "yarn eslint --fix \"./src/**/*.ts\"",
+    "start": "node dist/index.js",
+    "lint": "eslint \"./src/**/*.ts\"",
+    "lint-fix": "eslint --fix \"./src/**/*.ts\"",
     "prepare": "husky install"
   },
   "dependencies": {
